adding google places library to deps

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"moment": "latest",
 		"assert": "latest",
 		"q": "latest",
-		"request": "latest"
+		"request": "latest",
+		"googleplaces": "latest"
 	}
 }
